--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   sqflite: ^1.3.0
   path_provider: ^1.6.5
+  sprintf: ^4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
